--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -1,4 +1,6 @@
 name: first workflow
+env:
+  WORKFLOW_VAR: "This variable is declared at the workflow level"
 on:
   workflow_dispatch:
   
@@ -22,10 +24,16 @@ jobs:
 
   secondjob:
     runs-on: ubuntu-latest
+    needs: firstjob
+    env: 
+      JOB_VAR: "This is a job variable"
     steps:
       - name: secondJob script
         shell: bash
         run:  |
           echo this is the second job
           echo and this is a multi-line script
+      - name: environment variables
+        env: 
+          STEP_VAR: "This variable is declared at the step level"  
         
