--- a/.github/workflows/firstWorkFlow.yml
+++ b/.github/workflows/firstWorkFlow.yml
@@ -35,5 +35,14 @@ jobs:
           echo and this is a multi-line script
       - name: environment variables
         env: 
-          STEP_VAR: "This variable is declared at the step level"  
+          STEP_VAR: "This variable is declared at the step level"
+        run: |
+          echo $WORKFLOW_VAR
+          echo $JOB_VAR
+          echo $STEP_VAR
+          echo "The following is a secret: ${{ secrets.SOME_SECRET }}, of course, I can't tell you because then it wouldn't be a secret..."
+          echo "The following are default environment variables:"
+          echo $GITHUB_ACTOR
+          echo $GITHUB_JOB
+          echo $GITHUB_REF
         
